# scrapper-

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: dependencies.py  main.py  utils.py
src/cache/: redis.py
src/cache_storage/: __init__.py  redis.py
src/decorators/: retry.py
src/notification/: __init__.py  console.py
src/object_storage/: __init__.py  local.py
src/router/: __init__.py  scrapper.py
src/scrapper/: __init__.py  dental_stall.py
src/storage/: __init__.py  local_storage.py
