[project]
name = "atyls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dill>=0.3.9",
    "fast-depends>=2.4.12",
    "fastapi>=0.115.11",
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "lxml>=5.3.1",
    "redis>=5.2.1",
    "ruff>=0.9.9",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
